--- a/SportsApp/LeagueDetails/View/TeamsSection/TeamCell.xib
+++ b/SportsApp/LeagueDetails/View/TeamsSection/TeamCell.xib
@@ -11,18 +11,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LeagueDetailsCollectionViewController" customModule="SportsApp" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="5rh-KZ-iyq" customClass="TeamCell" customModule="SportsApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="351" height="60"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5rh-KZ-iyq" customClass="TeamCell" customModule="SportsApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="0.0" height="60"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0o-bj-1zS">
-                    <rect key="frame" x="16" y="27" width="7.5" height="20"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0o-bj-1zS">
+                    <rect key="frame" x="12" y="27" width="7.5" height="20"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" text="Arsnal" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjy-if-9ep">
-                    <rect key="frame" x="116.5" y="27" width="100" height="20.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" text="Arsnal" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjy-if-9ep">
+                    <rect key="frame" x="112.5" y="27" width="100" height="20.5"/>
                     <color key="tintColor" red="0.0" green="0.22352941179999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="FMI-Yx-xfF"/>
@@ -32,25 +31,25 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="11" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wN2-pb-0gP">
-                    <rect key="frame" x="241.5" y="26.5" width="15" height="21"/>
+                    <rect key="frame" x="237.5" y="26.5" width="15" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="88" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MoD-eE-80M">
-                    <rect key="frame" x="284.5" y="26.5" width="21" height="21"/>
+                    <rect key="frame" x="280.5" y="26.5" width="21" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="26" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9TX-aI-grg">
-                    <rect key="frame" x="333.5" y="26.5" width="21" height="21"/>
+                    <rect key="frame" x="329.5" y="26.5" width="21" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NHb-wu-ObA">
-                    <rect key="frame" x="51.5" y="17" width="40" height="40"/>
+                    <rect key="frame" x="47.5" y="17" width="40" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="22s-6z-WRh"/>
                         <constraint firstAttribute="height" constant="40" id="3h5-2i-6Cd"/>
@@ -61,7 +60,7 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <accessibility key="accessibilityConfiguration" identifier="TeamCell"/>
             <constraints>
-                <constraint firstItem="j0o-bj-1zS" firstAttribute="leading" secondItem="5rh-KZ-iyq" secondAttribute="leading" constant="16" id="8IK-eQ-WTE"/>
+                <constraint firstItem="j0o-bj-1zS" firstAttribute="leading" secondItem="5rh-KZ-iyq" secondAttribute="leading" constant="12" id="8IK-eQ-WTE"/>
                 <constraint firstItem="MoD-eE-80M" firstAttribute="centerY" secondItem="S1t-wd-ScK" secondAttribute="centerY" id="Fsr-St-F1k"/>
                 <constraint firstItem="zjy-if-9ep" firstAttribute="leading" secondItem="NHb-wu-ObA" secondAttribute="trailing" constant="25" id="H2M-fS-cCg"/>
                 <constraint firstItem="9TX-aI-grg" firstAttribute="leading" secondItem="MoD-eE-80M" secondAttribute="trailing" constant="28" id="HSL-Mg-DLy"/>
